package g20swe.addressbook.model.contacts;

public class BasicContact {
    
}
