package g20swe.addressbook.service;

public abstract class AddressBookService {
    
}
