@startuml

skinparam linetype polyline
skinparam nodesep 20
skinparam ranksep 20

package "com․googlecode․ez-vcard" {
    class VCard
}

package "g12swe․rubrica" {
    class App

    package "controller" {
        class RootController
        class MainController
        class ContactController
    }

    package "model" {
        class AddressBook
        
        package "contacts" {
            abstract class Contact
            class BasicContact
            class ExtendedContact
            class PhoneNumber
            class EmailAddress

            package "validation" {
                abstract class Validatable
            }
        }
    }
        
    package "view" {
        class RootView <<FXML>>
        class MainView <<FXML>>
        class ContactView <<FXML>>
    }

    package "exceptions" {
        class InvalidPhoneNumberException
        class InvalidEmailAddressException
    }

    package "service" {
        abstract class AddressBookService
        class FileService
        class ImportExportService
    }

    ' Relazioni più pulite e dirette
    exceptions ..> model : valida
    model --> service : utilizza
    service --> controller : fornisce dati
    controller --> view : aggiorna
    controller <--> model : gestisce

    contacts <.. view : usa
    
    ' Relazioni con VCard
    VCard <.. service : import/export
    VCard <.. contacts : conversione
}

' Migliorie grafiche
hide class circle
hide abstract circle
hide class methods
hide class attributes
hide abstract methods
hide abstract attributes

@enduml